# LogLib

./: CMakeLists.txt
include/: LogLib.h  LogLibFiles.h
resources/: LogLib.h
src/: LogLib.cpp  LogLibFiles.cpp
